[package]
name = "code_writer"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
parser.workspace = true
strum.workspace = true
strum_macros.workspace = true
unindent = "0.2.4"

[dev-dependencies]
rand.workspace = true
